--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thiago // Portfolio</title>
+    <title>grill0@portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -19,19 +19,19 @@
 
     <section class="hero">
         <div class="terminal">
-            <p class="line">> hola, soy <span class="green">Thiago</span><span class="cursor">▊</span></p>
+            <p class="line delay0">> hola, soy <span class="green">Thiago</span><span class="cursor">▊</span></p>
             <p class="line delay">> desarrollador web & software de 16 años.</p>
             <p class="line delay2">> sencillez ante todo.</p>
         </div>
         <div class="bg-hero">
-            <p>HOLA</p>
+            <img class="line delay3" src="img.png" height="300px">
         </div>
     </section>
 
     <section id="about" class="section">
         <h2 class="title">{ about_me }</h2>
         <p>
-            Argentino. Desde los 10 que me apasionan las computadoras, y nunca dejo de aprender
+            argentino. desde los 10 apasionado de las computadoras. nunca dejo de aprender.
         </p>
     </section>
 
@@ -40,20 +40,20 @@
 
         <div class="grid">
             <div class="card">
-                <h3>Proyecto 1</h3>
-                <p>Sistema retro con estética terminal.</p>
+                <h3>cricket</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae autem, sunt atque quis provident obcaecati alias, laborum sapiente ad, magnam iste facilis harum laboriosam suscipit natus itaque! Eos, nostrum corporis?</p>
+                <a href="https://github.com/gr1ll0o/cricket" target="_blank">→ ver</a>
+            </div>
+
+            <div class="card">
+                <h3>-</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente tenetur aspernatur perferendis molestiae, minus dolor aliquam doloremque in sunt, doloribus obcaecati aut, vel animi odit nobis nihil necessitatibus ea suscipit.</p>
                 <a href="#" target="_blank">→ ver</a>
             </div>
 
             <div class="card">
-                <h3>Proyecto 2</h3>
-                <p>Dashboard estilo consola.</p>
-                <a href="#" target="_blank">→ ver</a>
-            </div>
-
-            <div class="card">
-                <h3>Proyecto 3</h3>
-                <p>Simulador o herramienta dev.</p>
+                <h3>-</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit dolores reiciendis velit mollitia? Soluta reprehenderit iure aliquid numquam. Voluptatem, accusantium. Magnam odit nisi voluptatibus reprehenderit et, molestias cumque. Esse, rerum.                </p>
                 <a href="#" target="_blank">→ ver</a>
             </div>
         </div>
