Social Media Links

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <section id="about" class="section">
         <h2 class="title">{ about_me }</h2>
         <p>
-            argentino. desde los 10 apasionado de las computadoras. nunca dejo de aprender.
-        </p>
+            argentino. desde los 10 apasionado de las computadoras. nunca dejo de aprender <br>
+            experiencia en Python (CLI & GUI Apps y scripting), desarrollo web (HTML / JS Vanilla / CSS), aplicaciones de escritorio con Proton. <br>
+            mas de dos años desarrollando videojuegos y componiendo su música, actualmente me encuentro aprendiendo Linux y ciberseguridad básica. <br>
+            experiencia en personalización y configurado de equipos Linux. <br><br>
+            tengo una personalidad muy lógica, directa y evasora de redundancias o reiteraciones. busco la solucion mas sencilla, la perfecciono, la exploto y repito.</p>
     </section>
 
     <section id="projects" class="section">
@@ -41,20 +44,22 @@
         <div class="grid">
             <div class="card">
                 <h3>cricket</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae autem, sunt atque quis provident obcaecati alias, laborum sapiente ad, magnam iste facilis harum laboriosam suscipit natus itaque! Eos, nostrum corporis?</p>
+                <p><i>cricket</i> es una interfaz gráfica de escritorio de código abierto, para la gestión de listas de correo electrónico y el envío masivo de correos electrónicos.</p>
                 <a href="https://github.com/gr1ll0o/cricket" target="_blank">→ ver</a>
             </div>
 
             <div class="card">
-                <h3>-</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente tenetur aspernatur perferendis molestiae, minus dolor aliquam doloremque in sunt, doloribus obcaecati aut, vel animi odit nobis nihil necessitatibus ea suscipit.</p>
-                <a href="#" target="_blank">→ ver</a>
+                <h3>CSSField</h3>
+                <p>Un sencillo editor/tester de CSS online en base a cuatro elementos que forman una cara, para pura diversion y/o prueba de propiedades sencillas.</p>
+                <a href="https://cssfield.netlify.app" target="_blank">→ visitar</a> |
+                <a href="https://github.com/gr1ll0o/CSSField" target="_blank">→ ver</a>
             </div>
 
             <div class="card">
-                <h3>-</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit dolores reiciendis velit mollitia? Soluta reprehenderit iure aliquid numquam. Voluptatem, accusantium. Magnam odit nisi voluptatibus reprehenderit et, molestias cumque. Esse, rerum.                </p>
-                <a href="#" target="_blank">→ ver</a>
+                <h3>EasyTube</h3>
+                <p>Reproductor web de videos de YouTube sin anuncios y directo, con funciones sencillas de reproducción, sin necesidad de cuentas o autenticaciones.</p>
+                <a href="https://easytubi.netlify.app/" target="_blank">→ visitar</a> |
+                <a href="https://github.com/gr1ll0o/easytube" target="_blank">→ ver</a>
             </div>
         </div>
     </section>
@@ -66,6 +71,9 @@
     </section>
 
     <footer>
+        <div class="social-media">
+            AÑADIR SIMBOLOS DE REDES SOCIALES!
+        </div>
         <p>© 2025 Grillo :: crafted with <span class="green">code</span></p>
     </footer>
 
